--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,11 @@
 		</dependency>
 		<!-- <dependency> <groupId>org.springframework.cloud</groupId> <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId> 
 			</dependency> -->
-
+		<dependency>
+			<groupId>com.exception</groupId>
+			<artifactId>HospitalGlobalException</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
