--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 server.port=9000
+
+logging.level.web=DEBUG
+
+#Set false to disable live reload
+spring.devtools.restart.enabled = false
+#If you want to disable auto-reload in browser for files in few of these paths, then use spring.devtools.restart.exclude property
+spring.devtools.restart.exclude=static/**,public/** 
